fix text overflow

--- a/src/sass/views/includes/slideToAccept.scss
+++ b/src/sass/views/includes/slideToAccept.scss
@@ -83,6 +83,11 @@ slide-to-accept {
       font-weight: 600;
       letter-spacing: .03rem;
       z-index: 1;
+
+      .justify {
+        width: 50%;
+        text-align: center;
+      }
     }
 
     &__status-text {
